mongo-demo/mongo-namespace.yml
apiVersion: v1 
kind: Namespace 
metadata:
  name: mongo
  labels:
    name: mongo
