mongo-demo/mongo-express.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongo-express
  namespace: mongo
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

---
apiVersion: v1 
kind: Service 
metadata:
  name: mongo-express-service
  namespace: mongo
  labels:
    app: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      # nodePort: 30000
