mongo-demo/mongo.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongodb
  namespace: mongo
  labels:
    app: mongodb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

---
apiVersion: v1
kind: Service 
metadata:
  name: mongodb-service
  namespace: mongo
  labels:
    app: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
